verbose = TRUE as default for all fnx

--- a/NEWS
+++ b/NEWS
@@ -5,3 +5,4 @@ MINOR IMPROVEMENTS
 * Added some checks for user input
 * fixed documentation
 * cts_convert() returns NA if no result was found.
+* set verbose = TRUE as default for all functions
