--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ MINOR IMPROVEMENTS
 * fixed documentation.
 * cts_convert() returns NA if no result was found.
 * set verbose = TRUE as default for all functions.
+* Added unit tests
 
 BUG FIXES
 
