updated Readme + news

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 webchem 0.0.3
 ======================
 
+NEW FEATURES
+
+* Query SRC PHYSPROP Database with physprop().
+
+
+
 
 webchem 0.0.2
 ======================
@@ -8,7 +14,7 @@ webchem 0.0.2
 NEW FEATURES
 
 * Query the PAN Pesticides Database with pan().
-* Query Allan Woods Compendium of Pesticide Common Names
+* Query Allan Woods Compendium of Pesticide Common Names with allanwood().
 
 MINOR IMPROVEMENTS
 
