--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ NEW FEATURES
 
 * Query SRC PHYSPROP Database with physprop().
 * Query the ETOX ID with get_etoxid(); query basic information with etox_basic();
-  quality targets with etox_targets()
+  quality targets with etox_targets() and test results with etox_tests().
 
 MINOR IMPROVEMENTS
 
