Correct Alan Woods first name everywhere

--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,7 @@ MINOR IMPROVEMENTS
 
 BUG FIXES
 
-
+* Correct the spelling of Alan Wood and rename function allanwood() to alanwood()
 
 
 webchem 0.0.2
