--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ Source | Function(s | API Docs | API key
 PubChem | `get_cid()`, `cid_compinfo()` | [link](https://pubchem.ncbi.nlm.nih.gov/) | none
 [Chemical Translation Service (CTS)](http://cts.fiehnlab.ucdavis.edu/) | `cts_convert()`, `cts_compinfo()` | none | none
 [PAN Pesticide Database](http://www.pesticideinfo.org/) | `pan()` | none | none
-[Allan Wood's Compendium of Pesticide Common Names](http://www.alanwood.net/pesticides/) | `allanwood()` | none | none
+[Alan Wood's Compendium of Pesticide Common Names](http://www.alanwood.net/pesticides/) | `alanwood()` | none | none
 [PHYSPROP Database](http://www.srcinc.com/what-we-do/environmental/scientific-databases.html) | `physprop()` | none | none
 [ETOX](http://webetox.uba.de/webETOX/index.do) | `get_etoxid()`, `etox_basic()`. `etox_targets()`, `etox_tests()` | none | none
 
@@ -154,12 +154,12 @@ pan_list[c("CAS Number", "Chemical Class", "Water Solubility (Avg, mg/L)", "Adso
 
 
 
-#### Allan Wood's Compendium of Pesticide Common Names
+#### Alan Wood's Compendium of Pesticide Common Names
 
-`allanwood()` returns a list of 9 entries and can query common names and cas numbers:
-```{r allanwood}
-allanwood('Fluazinam', type = 'commonname')
-allanwood('79622-59-6', type = 'cas')$cname
+`alanwood()` returns a list of 9 entries and can query common names and cas numbers:
+```{r alanwood}
+alanwood('Fluazinam', type = 'commonname')
+alanwood('79622-59-6', type = 'cas')$cname
 ```
 
 #### SRC PHYSPROP Database
