--- a/README.Rmd
+++ b/README.Rmd
@@ -213,7 +213,7 @@ In webchem we provide a function to query this database by a CAS number.
 out <- ppdb_query('1071-83-6')
 ```
 
-The informaion output is enormous, I show here only a small part, the countries where the compound is approved:
+The information output is enormous, I show here only a small part, the countries where the compound is approved:
 
 ```{r ppdb_out}
 out[[3]]
