--- a/README.Rmd
+++ b/README.Rmd
@@ -242,6 +242,10 @@ If you're more familiar with Python you should check out [Matt Swains](https://g
 + [Daniel Münch](https://github.com/ropensci/webchem/commits?author=Dahaniel)
 + [Johannes Ranke](https://github.com/ropensci/webchem/commits?author=jranke)
 
+### Want to contribute?
+
+Checkout our [contribution guide here](https://github.com/ropensci/webchem/blob/master/CONTRIBUTING.md).
+
 ### Meta
 
 * Please [report any issues, bugs or feature requests](https://github.com/ropensci/webchem/issues).
