--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
-webchem 0.0.4.1
+webchem 0.0.4.0
 ======================
 
 NEW FEATURES
 * chemid() to query ChemIDplus http://chem.sis.nlm.nih.gov/chemidplus/
+* is.inchikey() and is.cas() to check if a string is valid inchikey or CAS registry number.
 
 MINOR IMPROVEMENTS
 
