--- a/README.Rmd
+++ b/README.Rmd
@@ -231,10 +231,25 @@ out$physprop
 
 
 
+#### Misc functions
+
+##### Check if a string is a valid CAS registry number
+```{r}
+is.cas('64-17-5')
+is.cas('64-17-6')
+```
+
+##### Check if a string is a valid InChIKey
+```{r}
+is.inchikey('BQJCRHHNABKAKU-KBQPJGBKSA-N')
+is.inchikey('BQJCRHHNABKAKU-KBQPJGBKXA-N')
+```
+
 
 #### I have multiple compounds. How should I query those?
 
 The simples possibly is to 1) Query all compounds ant store the results in a list and 2) extract the needed information from this list.
+Every function has an example with multiple queries.
 Maybe, this will ge easier in the future...
 
 First we query alanwood:
