--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ NEW FEATURES
 MINOR IMPROVEMENTS
 
 * cts_compinfo() checks if input is a inchikey (via exported function is.inchikey()).
+* cts_compinfo() is now more robust and verbose, if problems are encountered
 * alanwood() returns separate inchi and ichikeys in case of isomers.
 * alanwood() returns also subactvity (e.g. $Fluazinam$activity [1] "fungicides" and $Fluazinam$subactivity [1] "pyridine fungicides").
 * physprop() also returns boiling and melting points. Moreover, values are now numeric.
