--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ MINOR IMPROVEMENTS
 * alanwood() returns separate inchi and ichikeys in case of isomers.
 * alanwood() returns also subactvity (e.g. $Fluazinam$activity [1] "fungicides" and $Fluazinam$subactivity [1] "pyridine fungicides").
 * physprop() also returns boiling and melting points. Moreover, values are now numeric.
+* allanwood() is now defunct
 
 
 BUG FIXES
