--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ Source | Function(s | API Docs | API key
 [Alan Wood's Compendium of Pesticide Common Names](http://www.alanwood.net/pesticides/) | `alanwood()` | none | none
 [PHYSPROP Database](http://www.srcinc.com/what-we-do/environmental/scientific-databases.html) | `physprop()` | none | none
 [ETOX](http://webetox.uba.de/webETOX/index.do) | `get_etoxid()`, `etox_basic()`. `etox_targets()`, `etox_tests()` | none | none
-[PPDB](http://sitem.herts.ac.uk/aeru/iupac/search.htm) | `ppdb_query()` | none | none
+[PPDB](http://sitem.herts.ac.uk/aeru/iupac/search.htm) | `ppdb()` | none | none
 [ChemIDplus](http://chem.sis.nlm.nih.gov/chemidplus/) | `chemid()` | none | none
 
 #### API keys
@@ -214,7 +214,7 @@ The PPDB holds a lot of chemical and ecotoxicological information.
 In webchem we provide a function to query this database by a CAS number.
 
 ```{r ppdb}
-out <- ppdb_query('1071-83-6')
+out <- ppdb('1071-83-6')
 ```
 
 The information output is enormous, I show here only a small part, the countries where the compound is approved:
